--- a/css/style.css
+++ b/css/style.css
@@ -1772,16 +1772,12 @@ label {
     width: 100%;
   }
   #brand .inner .wrap article {
-    width: 380px;
+    width: 49%;
     height: 300px;
-    margin-right: 0px;
-  }
-  #brand .inner .wrap article::before {
-    content: "";
-    position: absolute;
+    margin-right: 2%;
   }
   #brand .inner .wrap article:nth-of-type(even) {
-    margin-left: 0px;
+    margin-left: 0%;
   }
   #brand .inner .wrap article:nth-of-type(1) {
     height: 620px;
