--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -151,16 +151,12 @@
         width: 100%;
   
         article {
-          width: 380px;
+          width: 49%;
           height: 300px;
-          margin-right: 0px;
-    
-          &::before {
-            content: '';
-            position: absolute;
-          }
+          margin-right: 2%;
+
           &:nth-of-type(even) {
-            margin-left: 0px;
+            margin-left: 0%;
           }
   
           &:nth-of-type(1) {
