--- a/css/style.css
+++ b/css/style.css
@@ -1782,10 +1782,11 @@ label {
   }
   #brand .inner .wrap article:nth-of-type(1) {
     width: 100%;
-    height: 620px;
-    padding: 170px 50px 0px;
+    height: 300px;
+    padding: 50px;
     text-align: center;
     cursor: auto;
+    margin-bottom: 20px;
   }
   #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
     margin-bottom: 20px;
