--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -162,10 +162,11 @@
   
           &:nth-of-type(1) {
             width: 100%;
-            height: 620px;
-            padding: 170px 50px 0px;
+            height: 300px;
+            padding: 50px;
             text-align: center;
             cursor: auto;
+            margin-bottom: 20px;
           }
   
           &:nth-of-type(n+1):nth-of-type(n+2) {
