--- a/css/style.css
+++ b/css/style.css
@@ -1783,21 +1783,14 @@ label {
   #brand .inner .wrap article:nth-of-type(1) {
     width: 100%;
     height: 300px;
-    padding: 50px;
-    text-align: center;
-    cursor: auto;
+    padding: 40px;
     margin-bottom: 20px;
   }
-  #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
-    margin-bottom: 20px;
+  #brand .inner .wrap article:nth-of-type(1) a {
+    margin-top: 0px;
   }
   #brand .inner .wrap article:nth-of-type(4) {
     margin-right: 2%;
-  }
-  #brand .inner .wrap::after {
-    content: "";
-    display: block;
-    clear: both;
   }
 }
 /* mobile ------------------------- */
