--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -163,22 +163,18 @@
           &:nth-of-type(1) {
             width: 100%;
             height: 300px;
-            padding: 50px;
-            text-align: center;
-            cursor: auto;
+            padding: 40px;
             margin-bottom: 20px;
-          }
-  
-          &:nth-of-type(n+1):nth-of-type(n+2) {
-            margin-bottom: 20px;
+
+            a {
+              margin-top: 0px;
+            }
           }
 
           &:nth-of-type(4) {
             margin-right: 2%;
           }
         }
-  
-        @include floatRelease();
       }
     }
   }
