--- a/css/style.css
+++ b/css/style.css
@@ -1737,40 +1737,6 @@ label {
     width: 100%;
     padding: 0px 20px;
   }
-  #brand .inner h2 {
-    font: 18px/1 "Josefin Sans", "Noto Sans KR";
-    color: #777;
-    text-align: center;
-    position: relative;
-    z-index: 3;
-  }
-  #brand .inner h1 {
-    font: bold 36px/1 "Source Sans Pro", "Noto Sans KR";
-    margin-bottom: 80px;
-    color: #252A34;
-    text-align: center;
-    position: relative;
-    z-index: 2;
-  }
-  #brand .inner h1::first-letter {
-    color: #FF2E63;
-    font-size: 50px;
-  }
-  #brand .inner h1::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 80px;
-    height: 110px;
-    border: 3px solid #08D9D6;
-    top: -100%;
-    left: 50%;
-    transform: translate(-50%, -10%);
-    z-index: -1;
-  }
-  #brand .inner .wrap {
-    width: 100%;
-  }
   #brand .inner .wrap article {
     width: 49%;
     height: 300px;
@@ -1794,6 +1760,36 @@ label {
   }
 }
 /* mobile ------------------------- */
+@media screen and (max-width: 539px) {
+  #brand {
+    padding: 100px 20px;
+  }
+  #brand .inner {
+    width: 100%;
+    padding: 0px 20px;
+  }
+  #brand .inner .wrap article {
+    width: 49%;
+    height: 300px;
+    margin-right: 0%;
+  }
+  #brand .inner .wrap article:nth-of-type(even) {
+    margin-left: 0%;
+    margin-right: 2%;
+  }
+  #brand .inner .wrap article:nth-of-type(1) {
+    width: 100%;
+    height: 300px;
+    padding: 50px;
+    margin-bottom: 20px;
+  }
+  #brand .inner .wrap article:nth-of-type(1) a {
+    margin-top: 0px;
+  }
+  #brand .inner .wrap article:nth-of-type(4) {
+    margin-right: 2%;
+  }
+}
 #header_sub {
   width: 100%;
   position: absolute;
