--- a/css/style.css
+++ b/css/style.css
@@ -1735,7 +1735,9 @@ label {
   }
   #brand .inner {
     width: 100%;
-    padding: 0px 20px;
+  }
+  #brand .inner .wrap {
+    width: 100%;
   }
   #brand .inner .wrap article {
     width: 49%;
@@ -1760,36 +1762,6 @@ label {
   }
 }
 /* mobile ------------------------- */
-@media screen and (max-width: 539px) {
-  #brand {
-    padding: 100px 20px;
-  }
-  #brand .inner {
-    width: 100%;
-    padding: 0px 20px;
-  }
-  #brand .inner .wrap article {
-    width: 49%;
-    height: 300px;
-    margin-right: 0%;
-  }
-  #brand .inner .wrap article:nth-of-type(even) {
-    margin-left: 0%;
-    margin-right: 2%;
-  }
-  #brand .inner .wrap article:nth-of-type(1) {
-    width: 100%;
-    height: 300px;
-    padding: 50px;
-    margin-bottom: 20px;
-  }
-  #brand .inner .wrap article:nth-of-type(1) a {
-    margin-top: 0px;
-  }
-  #brand .inner .wrap article:nth-of-type(4) {
-    margin-right: 2%;
-  }
-}
 #header_sub {
   width: 100%;
   position: absolute;
